[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-quick-memo"
version = "1.0.0"
description = "A small, keyboard-first Markdown memo editor for Windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=12.0,<13",
    "matplotlib>=3.10,<4",
]

[project.gui-scripts]
markdown-quick-memo = "markdown_quick_memo.main:main"

[tool.setuptools.packages.find]
include = ["markdown_quick_memo*"]
